# ppo_v2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/app_common/: app_config.c
components/app_common/include/: app_config.h  app_types.h
components/button_manager/: CMakeLists.txt  button_manager.c
components/button_manager/include/: button_manager.h
components/display_manager/: CMakeLists.txt  display_manager.c
components/display_manager/include/: display_manager.h  font.h
components/ppo2_logger/: CMakeLists.txt  ppo2_logger.c
components/ppo2_logger/include/: ppo2_logger.h
components/sensor_manager/: CMakeLists.txt  sensor_calibration.c  sensor_calibration_math.c  sensor_calibration_storage.c  sensor_health.c  sensor_manager.c
components/sensor_manager/include/: sensor_calibration.h  sensor_manager.h
components/warning_manager/: CMakeLists.txt  warning_manager.c
components/warning_manager/include/: warning_manager.h
main/: CMakeLists.txt  idf_component.yml  main.c
pcb/: esp_ppo_v2.kicad_pcb  esp_ppo_v2.kicad_prl  esp_ppo_v2.kicad_pro  esp_ppo_v2.kicad_sch  fabrication-toolkit-options.json  fp-info-cache
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
